# axedit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  c.css  config.toml  forever.py  import_runner.py  lsp.py  main.py  module_checker.py  nody.py  program.prof  pyproject.toml  requirements.txt  runner.py  setup.py  snippets.txt  test.py  test.rs  test_queue.py  todo.txt  tree.py
axedit/: __init__.py  __main__.py  autocompletions.py  classes.py  cli.py  cmd_bar.py  completions_server.py  config_manager.py  core.py  cursor.py  debugger.py  editor.py  editor_interface.py  editor_state.py  editorstate.py  enums.py  file_select_state.py  file_selector.py  first_run.py  funcs.py  input_queue.py  internals.py  lang_server.py  line_numbers.py  linter.py  linter_server.py  live_text_object.py  logs.py  menu_state.py  modal.py  module_checker.py  scrollbar.py  shared.py  state_enums.py  state_manager.py  states-pygbag.py  states.py  status_bar.py  syntax_highlighting.py  text_buffer.py  (+4 more)
axedit/assets/data/default_config/: config.toml
axedit/assets/data/themes/: catppuccin-frappe.yaml  catppuccin-mocha.yaml  dracula.yaml  google-dark.yaml  gruvbox-dark-hard.yaml  gruvbox-dark-medium.yaml  gruvbox-dark-pale.yaml  gruvbox-dark-soft.yaml  gruvbox-light-hard.yaml  gruvbox-light-soft.yaml  kleur.yaml  material-darker.yaml  material-lighter.yaml  nord.yaml  (+6 more)
src/: __init__.py  autocompletions.py  core.py  cursor.py  editor.py  editorstate.py  file_select_state.py  funcs.py  line_numbers.py  shared.py  state_enums.py  states.py  status_bar.py  syntax_highlighting.py  utils.py
(+2 files in other folders)
