[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axedit"
version = "0.1.4"
authors = [
    { name = "Axis (blankRiot96)", email = "blankRiot96@gmail.com" },
]
description = "Axedit is a modal text editor that attempts to implement vim-like motions"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "jedi>=0.19.2",
    "platformdirs>=4.5.0",
    "pygame-ce>=2.5.5",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.1",
    "tomlkit>=0.13.3",
    "typing-extensions>=4.15.0",
]
keywords=["editor"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Editors",
    "Intended Audience :: Developers",
]
readme = { file = "README.md", content-type = "text/markdown" }


[project.urls]
Homepage = "https://github.com/blankRiot96/axedit"
Repository = "https://github.com/blankRiot96/axedit"
Issues = "https://github.com/blankRiot96/axedit/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"axedit" = ["assets/**/*"]

[project.scripts]
axedit = "axedit.__main__:main"

